# Yatchy

./: .gitignore  README.md  faq.md
3D/cases/: JLC3D.md  README.md
3D/cases/Glaucon-brick-remix/3D/: glaucon1984-brick-remix.7z
3D/cases/Kitkat-rotated/3D/: rotated-150mah.step  rotated-250mah.step
3D/cases/Michal-gameboy/3D/: michal-gameboy-bottom.3mf  michal-gameboy-top.3mf  michal-gameboy.FCStd
3D/cases/Szybet-brick/3D/: Brick case for 30x20x5mm.step
3D/cases/Szybet-side/3D/: module led cover.step  motor cover.step  side battery case.step  side case.step  strap.step
3D/cases/glowy-thicc/3D/: coverintegratedbatter.step  thicc-case-for-20mm-one-piece-strap.step
3D/cases/patches/: README.md
3D/cases/patches/1/: better_strap_dot.stl  case_front_v2.step  motor_cover_thinner.step
3D/cases/thiccglowb/: coverintegratedbatter.step  readme.md  yatchy case for 20mm one piece strap.step  yatchycase.3mf
3D/pcb/: README.md  Yatchy_pcb.step
hardware/: BinnerParts.xlsx  README.md  components-calc.ods  creating-your-own.md  lpcore.md  power-consumption.md  time-accuracy.md
hardware/create-your-own/: README.md  assembling.md  ordering.md
hardware/create-your-own/test-program/: Cargo.toml  README.md  build_esp32c6.sh  build_esp32s3.sh  rust-toolchain.toml
hardware/create-your-own/test-program/.cargo/: config.toml
hardware/create-your-own/test-program/src/: actions.rs  flex_io.rs  gpio_action.rs  main.rs
hardware/create-your-own/test-program/src/esp32c6/: actions.rs  flex_io.rs  gpio_action.rs  mod.rs
hardware/create-your-own/test-program/src/esp32s3/: actions.rs  flex_io.rs  gpio_action.rs  mod.rs
hardware/kicad/: .gitignore  components.ods
hardware/kicad/Yatchy/: Yatchy.cmp  Yatchy.kicad_pcb  Yatchy.kicad_pro  Yatchy.kicad_sch  Yatchy.kicad_sym  fp-lib-table  sym-lib-table
hardware/kicad/Yatchy/3d-Models/: AST0760_MAL.step  BMA456.stp  BMA530.stp  CLMVC-FKA-CL1D1L71BB7C3C3_CRE.step  EVP-AKE31A.stp  IN-S42DS.step  MCP73831T-2ATI_OT.step  USB4730-GF-A-KIT.stp  display_eink.step
hardware/kicad/Yatchy/Yatchy.pretty/: AST0760_MAL.kicad_mod  BMA423.kicad_mod  BMA530.kicad_mod  BOSCH_LGA-12.kicad_mod  Battery_Header.kicad_mod  CLMVC-FKA-CL1D1L71BB7C3C3_CRE.kicad_mod  C_0402_1005Metric.kicad_mod  C_0603_1608Metric.kicad_mod  C_0805_2012Metric.kicad_mod  D_0805_2012Metric.kicad_mod  F32Q1A7H111024.kicad_mod  HPI0530-100.kicad_mod  IFX-PG-TLGA-5-6-V.kicad_mod  LEDC2106X100N.kicad_mod  Motor_Header.kicad_mod  (+28 more)
hardware/kicad/scripts/: generate.sh  kibot.yaml
hardware/power-consumption/: README.md  watchyv2-calculations.ods  yatchy-calculations.ods
hardware/read-only/: Yatchy-ibom.html  index.html  module-BTBMHM-ibom.html  module-default-ibom.html
test-program/: Cargo.toml  README.md  monitor_uart.sh
test-program/.cargo/: config.toml
test-program/src/: actions.rs  flex_io.rs  gpio_action.rs  main.rs
(+19 files in other folders)
