[package]
name = "yatchy-test-program"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-hal = { version = "1.0.0", features = ["unstable"] }
esp-rtos = { version = "0.2.0", features = ["embassy", "log-04"] }
esp-backtrace = { version = "0.18.1", features = [
    "panic-handler",
    "println",
] }
esp-alloc = { version = "0.9.0" }
embassy-executor = { version = "0.9.0" }
embassy-time = { version = "0.5.0" }
embassy-embedded-hal = { version = "0.5.0", features = ["time"] }
static_cell = "2.1.1"
embedded-io-async = "0.7.0"
heapless = "0.9.2"
esp-println = { version = "0.16.1", features = ["log-04", "colors", "auto"] }
log = "0.4.29"
once_cell = { version = "1.21.4", default-features = false, features = [
    "portable-atomic",
    "critical-section",
    "race",
] }

[features]
default = ["usb_jtag", "esp32c6"]
usb_jtag = []
uart = []
i2c = []
init_test = []

esp32c6 = [
    "esp-hal/esp32c6",
    "esp-rtos/esp32c6",
    "esp-backtrace/esp32c6",
    "esp-alloc/esp32c6",
    "esp-println/esp32c6",
]
esp32s3 = [
    "esp-hal/esp32s3",
    "esp-rtos/esp32s3",
    "esp-backtrace/esp32s3",
    "esp-alloc/esp32s3",
    "esp-println/esp32s3",
]

[profile.release]
opt-level = "z"
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
overflow-checks = false

[profile.dev]
opt-level = "z"
lto = 'fat'
panic = "abort"